examples/tests/invalid/throw_non_string.w
throw 42;
    //^ error: expected expression of type str, but received num
    